--- a/src/app/pages/public/blog/blog.component.html
+++ b/src/app/pages/public/blog/blog.component.html
@@ -50,9 +50,16 @@
           </div>
           <div class="hidden md:block">
             <div class="aspect-video bg-white/10 rounded-xl flex items-center justify-center">
-              <svg class="w-24 h-24 text-white/30" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
-              </svg>
+              <img 
+                ngSrc="/images/logo/devflowfix_image.png"
+                width="640"
+                height="361"
+                alt="Devflowfix feature image" 
+                title="Click to explore DevFlowFix features" 
+                class="w-full h-auto block rounded-lg shadow-md"
+                aria-details="CI/CD pipelines representation in orange color"
+                priority
+              />
             </div>
           </div>
         </div>
