--- a/src/app/shared/layout/app-layout/app-layout.component.html
+++ b/src/app/shared/layout/app-layout/app-layout.component.html
@@ -19,3 +19,7 @@
     </div>
   </div>
 </div>
+
+<!-- Onboarding Components -->
+<app-product-tour></app-product-tour>
+<app-onboarding-progress></app-onboarding-progress>
